tests/specs/ecosystem/lou/types/2_0_0.test
lou/types/2.0.0
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/src/@lou.codes/constants/empty.js'.
    at file://<tmpdir>/src/EmptyArray.ts:1:34

TS2304 [ERROR]: Cannot find name 'HTMLAllCollection'.
 */ export type Falsy = EmptyString | HTMLAllCollection | Nullish | 0 | 0n | false;
                                      ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/Falsy.ts:24:39

Found 2 errors.

error: Type checking failed.

